Update for 10.11 beta 1

--- a/GMailinator/Info.plist
+++ b/GMailinator/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.nompute.gmailinator.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -20,13 +20,14 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
-	<key>NSPrincipalClass</key>
-	<string>GMailinator</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2013 Michael Lai. All rights reserved.</string>
+	<key>NSPrincipalClass</key>
+	<string>GMailinator</string>
 	<key>SupportedPluginCompatibilityUUIDs</key>
 	<array>
 		<string>60D52D22-7491-4CA7-95BA-88215BD88F8E</string>
+		<string>AB695A2B-4605-4A74-A99F-AF9F9C92C41B</string>
 		<string>B61772F2-9975-4EC0-B22F-9A277C46ADD2</string>
 		<string>0A13A9ED-4864-4F07-AE70-60FB2F7EA63D</string>
 		<string>DAFFB2B4-77BC-4C25-8CE1-2405E652D54B</string>
